# drip-search

./: .gitignore  app.py  chat.py  pyproject.toml
data/: drip-01.txt  drip-02.txt  drip-03.txt  drip-04.txt  drip-05.txt  drip-06.txt  drip-07.txt
models/: chunker.py  combined_retriever.py  document.py  groqllm.py  keyword_retriever.py  llm.py  reranker.py  retriever.py  semantic_retriever.py
scripts/: data_loader.ipynb  data_loader.py  drip_semantic.py
tests/: semantic_retriever_tests.py
